# aventus-test

./: README.md
1-javascript-challenge/: README.md  flake.nix
1-javascript-challenge/src/: cli.js  index.js  mock.js  tests.js  tree.js  utils.js
2-rust-challenge/: Cargo.toml  README.md  rust-toolchain.toml
2-rust-challenge/src/: eval.rs  lib.rs  main.rs  parse.rs  tokens.rs
2-rust-challenge/tests/: acceptance.rs  custom_tests.rs
2-rust-challenge/tests/helpers/: mod.rs
3-substrate-challenge/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
3-substrate-challenge/external-api/: Cargo.toml
3-substrate-challenge/external-api/src/: main.rs
3-substrate-challenge/node/: Cargo.toml
3-substrate-challenge/pallets/oracle-price-feed/: Cargo.toml
3-substrate-challenge/pallets/oracle-price-feed/src/: lib.rs  tests.rs
3-substrate-challenge/pallets/template/: Cargo.toml
3-substrate-challenge/runtime/: Cargo.toml
3-substrate-challenge/runtime/src/: lib.rs
