[package]
name = "pallet-oracle-price-feed"
description = "Oracle pallet as a price feed"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
parking_lot ={ workspace = true }

[features]
default = ["std"]
try-runtime = []
std = ["codec/std", "frame/std", "scale-info/std"]
